--- a/LaFiesta/appsettings.json
+++ b/LaFiesta/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    //"LaFiestaConnection": "Server=baker.local.thomasmore.be\\GSQLEDU01,45001;Database=r0786156;Trusted_Connection=False; User Id=r0786156;Password=sql4you Trusted_Connection=False",
+    "LaFiestaConnection": "Server=baker.local.thomasmore.be\\GSQLEDU01,45001; Database=r0786156; User Id=r0786156; Password=sql4you; Trusted_Connection=False",
     "LocalDBConnection": "Server=(localdb)\\mssqllocaldb; Database=LaFiestaLocal; Trusted_Connection=True"
   },
     "Logging": {
